--- a/Kapnayan-CSU.html
+++ b/Kapnayan-CSU.html
@@ -6,24 +6,34 @@
     <title>CSU-Kapnayan Login</title>
     <style>
         body {
-            font-size: 1.2rem;
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background: url('images/background.jpg') no-repeat center center/cover;
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+            background-color: #282c34;
+        }
+
+        #particles-js {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
 
         .card {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             max-width: 500px;
             padding: 3rem;
             background-color: rgba(255, 255, 255, 0.9);
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             text-align: center;
+            z-index: 10;
         }
 
         .card img {
@@ -42,40 +52,11 @@
             color: #6c757d;
             margin-bottom: 2rem;
         }
-
-        .form-control {
-            font-size: 1.2rem;
-            height: 50px;
-            width: 100%;
-            margin-bottom: 1rem;
-            padding: 0.5rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .btn {
-            font-size: 1.2rem;
-            height: 50px;
-            width: 100%;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        }
-
-        #errorMessage {
-            font-size: 1rem;
-            color: red;
-            margin-top: 1rem;
-        }
     </style>
 </head>
 <body>
+    <div id="particles-js"></div> <!-- Particles background -->
+
     <div class="card">
         <div class="mb-4">
             <a href="sign-in.html">
@@ -85,7 +66,14 @@
             <p>Caraga State University</p>
         </div>
     </div>
-    <!-- Bootstrap JS -->
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <!-- Custom JS -->
+    <script src="app.js"></script>
 </body>
 </html>
