--- a/Kapnayan-CSU.html
+++ b/Kapnayan-CSU.html
@@ -11,7 +11,7 @@
             width: 100vw;
             height: 100vh;
             overflow: hidden;
-            background-color: #282c34;
+            background-color: rgb(145, 13, 13);
         }
 
         #particles-js {
